1. Criado Menu Principal 2. Criado BancoController 3. Criado Tela de abertura de conta.